--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,8 @@ spring.sql.init.mode=always
 
 spring.config.activate.on-profile=ci,test
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:security
-spring.datasource.username=test
-spring.datasource.password=test
+!spring.datasource.url=jdbc:h2:mem:security
+spring.datasource.url=jdbc:h2:file:./db/security
+spring.datasource.username=root
+spring.datasource.password=root
+spring.sql.init.schema-locations=classpath:db/schema.sql
